# kilroy-ws-client-py-sdk

./: .gitattributes  404.html  README.md  environment.yml  index.html  pyproject.toml
.github/workflows/: docs.yml  draft.yml  pypi.yml  test-multiplatform.yml
kilroy_ws_client_py_sdk/: README.md  pyproject.toml
kilroy_ws_client_py_sdk/docs/: mkdocs.yml
kilroy_ws_client_py_sdk/docs/docs/: index.md
kilroy_ws_client_py_sdk/src/kilroy_ws_client_py_sdk/: __init__.py  client.py  errors.py  messages.py  operations.py  protocol.py  receivers.py  senders.py  utils.py
kilroy_ws_client_py_sdk/tests/unit/kilroy_ws_client_py_sdk/: test_client.py  test_operations.py
search/: search_index.json
usage/: index.html
