# this file is needed to install the package from git without support for subdirectories
# see: https://github.com/python-poetry/poetry/issues/755

[tool.poetry]
name = "kilroy-ws-client-py-sdk"
version = "0.2.0"
description = "SDK for WebSocket clients in Python 🧰"
readme = "kilroy_ws_client_py_sdk/README.md"
authors = ["kilroy <kilroymail@pm.me>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/kilroybot/kilroy-ws-client-py-sdk"
documentation = "https://kilroybot.github.io/kilroy-ws-client-py-sdk"
packages = [{ include = "kilroy-ws-client-py-sdk", from = "kilroy_ws_client_py_sdk/src" }]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.3"
pydantic = "^1.9"

# dev

# test
pytest = { version = "^7.0", optional = true }
pytest-asyncio = { version = "^0.19", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["pytest", "pytest-asyncio"]
test = ["pytest", "pytest-asyncio"]

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
